syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";

message Event {
    UInt160 contract = 1;
    bytes data = 2;
    UInt256 transaction_hash = 3;
    uint32 index = 4;
    UInt256 block_hash = 5;
    UInt256 signature_hash = 6;
    repeated UInt256 topics = 7;
}
